Fixed ActionMetricsLogger logging result types as actions.